Fix on the comments

--- a/CI - Set-covering/es10ott2023.ipynb
+++ b/CI - Set-covering/es10ott2023.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -91,16 +91,16 @@
      "output_type": "stream",
      "text": [
       "({0, 1, 2, 3, 4, 5, 6, 7}, set())\n",
-      "(array([False,  True,  True, False, False, False, False, False]), array([ True,  True, False, False,  True, False,  True,  True]), array([ True,  True, False,  True, False,  True, False,  True]), array([ True,  True, False, False, False, False, False, False]), array([ True, False, False,  True, False,  True,  True, False]), array([False,  True, False,  True,  True, False, False, False]), array([ True, False,  True, False,  True,  True,  True, False]), array([False, False, False, False,  True, False, False,  True]))\n"
+      "(array([ True, False, False,  True, False, False, False,  True]), array([ True,  True,  True,  True, False, False,  True, False]), array([ True, False, False,  True,  True,  True,  True,  True]), array([ True,  True, False,  True,  True,  True, False,  True]), array([False, False,  True, False,  True, False,  True, False]), array([ True, False,  True, False,  True, False,  True, False]), array([ True, False, False, False, False, False,  True,  True]), array([False,  True, False, False,  True, False, False, False]))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([5, 5, 2, 3, 4, 3, 3, 3])"
+       "array([6, 3, 3, 4, 5, 2, 5, 4])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "#here the application of the Generic Search - Breadth First viewed in class (third pack of slides pag 18)\n",
+    "#here the application of the Generic Search viewed in class (third pack of slides pag 18)\n",
     "frontier = LifoQueue() # we use a LifoQueue (because we don't have a concept about the costs here) instead of a PriorityQueue which would be a particular case of the Generic Search (Dijkstra's alg.)\n",
     "frontier.put(State(set(), set(range(NUM_SETS)))) #the first state is the one with no taken sets\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,30 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 32 steps\n",
-      "State(taken=frozenset({0, 4, 7}), not_taken=frozenset({1, 2, 3, 5, 6}))\n"
+      "Solved in 35 steps\n",
+      "State(taken=frozenset({3, 4}), not_taken=frozenset({0, 1, 2, 5, 6, 7}))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "8"
+       "9"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#here the application of the Generic Search - Breadth First viewed in class (third pack of slides pag 18)\n",
+    "\n",
     "frontier = [] \n",
     "frontier.append(State(frozenset(), frozenset(range(NUM_SETS)))) #the first state is the one with no taken sets\n",
     "state_cost = {} # Use a dictionary to store the cost of each state\n",
