Other fixs on the comments

--- a/CI - Set-covering/es10ott2023.ipynb
+++ b/CI - Set-covering/es10ott2023.ipynb
@@ -141,6 +141,10 @@
    ],
    "source": [
     "#here the application of the Generic Search viewed in class (third pack of slides pag 18)\n",
+    "\n",
+    "#This is a transcription of the professor wrote in class during the 10/10/2023 lecture. Look at the code below to see my work\n",
+    "\n",
+    "\n",
     "frontier = LifoQueue() # we use a LifoQueue (because we don't have a concept about the costs here) instead of a PriorityQueue which would be a particular case of the Generic Search (Dijkstra's alg.)\n",
     "frontier.put(State(set(), set(range(NUM_SETS)))) #the first state is the one with no taken sets\n",
     "\n",
@@ -182,6 +186,15 @@
    ],
    "source": [
     "goal_check(current_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#You can find my code below this line"
    ]
   },
   {
@@ -240,25 +253,27 @@
    ],
    "source": [
     "\n",
-    "frontier = [] \n",
-    "frontier.append(State(frozenset(), frozenset(range(NUM_SETS)))) #the first state is the one with no taken sets\n",
+    "#Dijsktra logic applied though a priority function on a list (look at the frontier variable) NOT with a PriorityQueue. Some difference could appear in the behaviour\n",
+    "\n",
+    "frontier = [] #I used a list instead of a PriorityQueue and then I sorted it after each iteration to apply the priority logic\n",
+    "frontier.append(State(frozenset(), frozenset(range(NUM_SETS)))) #the first state is the one with no taken sets -> we use the frozenset type since is compatible with the priority function sorting \n",
     "state_cost = {} # Use a dictionary to store the cost of each state\n",
     "counter = 0 #counter used just to count the number of occurrencies needed to solve the problem\n",
     "current_state = frontier.pop()  #start the resolution taking the first element from the frontier queue\n",
     "while not goal_check(current_state):    #iterate until the problem is not resolved\n",
     "    counter += 1\n",
-    "    for action in current_state[1]: #an ACTION is represented as the activity of taking one set from \n",
+    "    for action in current_state[1]: #an ACTION is represented as the activity of taking one set from the not_taken group\n",
     "        new_state = State(current_state.taken ^ frozenset({action}), current_state.not_taken ^ frozenset({action}))\n",
     "        new_node = new_state # Use new_state as new_node\n",
     "        if new_state not in state_cost and new_state not in frontier: # Use .queue to get a list of elements in the PriorityQueue\n",
     "            # Add node to frontier and update solution\n",
     "            state_cost[new_node] = path_cost(new_state) # Update state_cost dictionary\n",
     "            frontier.append(new_state)\n",
-    "        elif new_state in frontier and state_cost[new_node] > path_cost(new_state): # Use .queue to get a list of elements in the PriorityQueue\n",
+    "        elif new_state in frontier and state_cost[new_node] > path_cost(new_state): \n",
     "            #update node and solution\n",
     "            state_cost[new_node] = path_cost(new_state) # Update state_cost dictionary\n",
-    "    frontier.sort(key=priority_function)\n",
-    "    current_state = frontier.pop()\n",
+    "    frontier.sort(key=priority_function) #let's apply the priority sorting to make the list equal to a real priority queue\n",
+    "    current_state = frontier.pop()  #this pop takes off the element with the highest priority\n",
     "\n",
     "print(f\"Solved in {counter:,} steps\")\n",
     "\n",
