Added version using a real PriorityQueue(heapq)

--- a/CI - Set-covering/es10ott2023.ipynb
+++ b/CI - Set-covering/es10ott2023.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,42 +218,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#use as priority function the iinverse of path_cost: smaller is better\n",
-    "def priority_function(state):\n",
-    "    return -path_cost(state)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 35 steps\n",
-      "State(taken=frozenset({3, 4}), not_taken=frozenset({0, 1, 2, 5, 6, 7}))\n"
+      "Solved in 52 steps\n",
+      "State(taken=frozenset({2, 3, 7}), not_taken=frozenset({0, 1, 4, 5, 6}))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "9"
+       "10"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#use as priority function the iinverse of path_cost: smaller is better\n",
+    "def priority_function(state):\n",
+    "    return -path_cost(state)\n",
     "\n",
-    "#Dijsktra logic applied though a priority function on a list (look at the frontier variable) NOT with a PriorityQueue. Some difference could appear in the behaviour\n",
+    "#Dijsktra logic applied though a priority function on a list (look at the frontier variable) NOT with a PriorityQueue. Some difference could appear in the\n",
     "\n",
     "frontier = [] #I used a list instead of a PriorityQueue and then I sorted it after each iteration to apply the priority logic\n",
     "frontier.append(State(frozenset(), frozenset(range(NUM_SETS)))) #the first state is the one with no taken sets -> we use the frozenset type since is compatible with the priority function sorting \n",
@@ -274,6 +273,62 @@
     "            state_cost[new_node] = path_cost(new_state) # Update state_cost dictionary\n",
     "    frontier.sort(key=priority_function) #let's apply the priority sorting to make the list equal to a real priority queue\n",
     "    current_state = frontier.pop()  #this pop takes off the element with the highest priority\n",
+    "\n",
+    "print(f\"Solved in {counter:,} steps\")\n",
+    "\n",
+    "print(current_state)\n",
+    "\n",
+    "path_cost(current_state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solved in 44 steps\n",
+      "State(taken=frozenset({2, 3, 7}), not_taken=frozenset({0, 1, 4, 5, 6}))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#This should be the official Dijkstra solution. Look at how the number of needed iterations is lower while the result is the same\n",
+    "\n",
+    "def priority_function(state):\n",
+    "    return path_cost(state)\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "initial_state = State(frozenset(), frozenset(range(NUM_SETS)))\n",
+    "frontier = [] # Now we use a priority queue implemented with a heap\n",
+    "heapq.heappush(frontier, (priority_function(initial_state), initial_state)) # Push the first state into the frontier\n",
+    "state_cost = {initial_state: 0} # Initialize state_cost with the initial state\n",
+    "counter = 0 # Counter used just to count the number of occurrences needed to solve the problem\n",
+    "current_state = heapq.heappop(frontier)[1]  # Start the resolution taking the first element from the frontier queue\n",
+    "while not goal_check(current_state):    # Iterate until the problem is not resolved\n",
+    "    counter += 1\n",
+    "    for action in current_state[1]: # An ACTION is represented as the activity of taking one set from the not_taken group\n",
+    "        new_state = State(current_state.taken ^ frozenset({action}), current_state.not_taken ^ frozenset({action}))\n",
+    "        new_node = new_state # Use new_state as new_node\n",
+    "        new_cost = state_cost[current_state] + path_cost(new_state) # Calculate the cost of the new state using your path_cost function\n",
+    "        if new_state not in state_cost or new_cost < state_cost[new_state]: \n",
+    "            state_cost[new_node] = new_cost # Update state_cost dictionary\n",
+    "            heapq.heappush(frontier, (priority_function(new_state), new_state))\n",
+    "    current_state = heapq.heappop(frontier)[1]  # This pop takes off the element with the highest priority\n",
     "\n",
     "print(f\"Solved in {counter:,} steps\")\n",
     "\n",
