--- a/CI - Set-covering/es10ott2023.ipynb
+++ b/CI - Set-covering/es10ott2023.ipynb
@@ -218,13 +218,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -283,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +293,7 @@
        "10"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +317,7 @@
     "    for action in current_state[1]: # An ACTION is represented as the activity of taking one set from the not_taken group\n",
     "        new_state = State(current_state.taken ^ frozenset({action}), current_state.not_taken ^ frozenset({action}))\n",
     "        new_node = new_state # Use new_state as new_node\n",
-    "        new_cost = state_cost[current_state] + path_cost(new_state) # Calculate the cost of the new state using your path_cost function\n",
+    "        new_cost = path_cost(new_state) # Calculate the cost of the new state using your path_cost function\n",
     "        if new_state not in state_cost or new_cost < state_cost[new_state]: \n",
     "            state_cost[new_node] = new_cost # Update state_cost dictionary\n",
     "            heapq.heappush(frontier, (priority_function(new_state), new_state))\n",
