--- a/CI - Set-covering/es10ott2023.ipynb
+++ b/CI - Set-covering/es10ott2023.ipynb
@@ -37,30 +37,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROBLEM_SIZE = 8\n",
-    "NUM_SETS=8\n",
+    "PROBLEM_SIZE = 5\n",
+    "NUM_SETS= 10\n",
     "#this is just a way to name our tuples\n",
     "State = namedtuple('State', ['taken', 'not_taken'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this operation allows us to generate randomly the sets we will use in the problem \n",
-    "SETS = tuple(np.array([random() <.5 for _ in range(PROBLEM_SIZE)]) for _ in range(NUM_SETS))\n",
+    "SETS = tuple(np.array([random() <.3 for _ in range(PROBLEM_SIZE)]) for _ in range(NUM_SETS))\n",
     "#goal_check(SETS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,23 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 3 steps\n"
+      "Solved in 43 steps\n",
+      "12\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "State(taken={5, 6, 7}, not_taken={0, 1, 2, 3, 4})"
+       "State(taken={4, 7}, not_taken={0, 1, 2, 3, 5, 6})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +146,7 @@
     "#This is a transcription of the professor wrote in class during the 10/10/2023 lecture. Look at the code below to see my work\n",
     "\n",
     "\n",
-    "frontier = LifoQueue() # we use a LifoQueue (because we don't have a concept about the costs here) instead of a PriorityQueue which would be a particular case of the Generic Search (Dijkstra's alg.)\n",
+    "frontier = SimpleQueue() # we use a SimpleQueue (because we don't have a concept about the costs here) instead of a PriorityQueue which would be a particular case of the Generic Search (Dijkstra's alg.)\n",
     "frontier.put(State(set(), set(range(NUM_SETS)))) #the first state is the one with no taken sets\n",
     "\n",
     "counter = 0 #counter used just to count the number of occurrencies needed to solve the problem\n",
@@ -165,6 +166,7 @@
     "    current_state = frontier.get()\n",
     "\n",
     "print(f\"Solved in {counter:,} steps\")\n",
+    "print(path_cost(current_state))\n",
     "current_state"
    ]
   },
@@ -199,13 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# but now we would like to define an actual cost in order to find an OPTIMAL solution different from the one found above - this became a Dijkstra approach\n",
     "# we are going to use the total number of True elements of the set we are taking\n",
-    "# [True False False] better than [True True False] I suppose\n",
+    "# we want the minimum possible OVERLAP among the tiles \n",
+    "    # [True False False] better than [True True False] for example\n",
     "\n",
     "def path_cost(state):\n",
     "    somma = 0\n",
@@ -213,29 +216,93 @@
     "        for a in SETS[s]:\n",
     "            if a == True:\n",
     "                somma += 1\n",
-    "    return somma\n"
+    "    return somma\n",
+    "\n",
+    "# another possible cost function would be the number of taken tiles: the smaller number of taken ones the better\n",
+    "def path_cost2(state):\n",
+    "    return sum(reduce(np.logical_or, [SETS[i] for i in state.taken],np.array([False for _ in range(PROBLEM_SIZE)])))\n",
+    "\n",
+    "#if we want to apply a greedy approach we have to define the concept of distance between the actual state and the goal solution: like, how much taken tiles I have to add to find a goal state?\n",
+    "def distance(state):\n",
+    "    return PROBLEM_SIZE - sum(reduce(np.logical_or, [SETS[i] for i in state.taken],np.array([False for _ in range(PROBLEM_SIZE)])))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 52 steps\n",
-      "State(taken=frozenset({2, 3, 7}), not_taken=frozenset({0, 1, 4, 5, 6}))\n"
+      "Solved in 3 steps\n",
+      "6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10"
+       "State(taken={0, 3, 5}, not_taken={1, 2, 4, 6, 7, 8, 9})"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#here the application of the Generic Search viewed in class (third pack of slides pag 18)\n",
+    "\n",
+    "#This is a transcription of the professor wrote in class during the 17/10/2023 lecture. Look at the code below to see my work\n",
+    "\n",
+    "####  GREEDY APPROACH  ####\n",
+    "\n",
+    "frontier = PriorityQueue() # we use a SimpleQueue (because we don't have a concept about the costs here) instead of a PriorityQueue which would be a particular case of the Generic Search (Dijkstra's alg.)\n",
+    "initial_state = State(set(), set(range(NUM_SETS)))\n",
+    "frontier.put((distance(initial_state),initial_state)) #the first state is the one with no taken sets\n",
+    "\n",
+    "counter = 0 #counter used just to count the number of occurrencies needed to solve the problem\n",
+    "_,current_state = frontier.get()  #start the resolution taking the first element from the frontier queue\n",
+    "while not goal_check(current_state):    #iterate until the problem is not resolved\n",
+    "    counter += 1\n",
+    "    for action in current_state[1]: #an ACTION is represented as the activity of taking one set from \n",
+    "        # The ^ operator in Python is a bitwise XOR (exclusive OR) operator. It returns True if and only if its arguments differ (one is True, the other is False)\n",
+    "        #so here it equals to take an action (set) from not_taken and put it into taken\n",
+    "        # new_state = State(current_state.taken | {action}, current_state.not_taken - {action}) -> this would be the same\n",
+    "        new_state = State(current_state.taken ^ {action}, current_state.not_taken ^ {action})\n",
+    "\n",
+    "        #it puts all the states generated into the frontier queue\n",
+    "        frontier.put((distance(new_state),new_state))\n",
+    "    \n",
+    "    #endly it takes one state at time and analyze its condition (if can be considered a goal state in the while above there)\n",
+    "    _,current_state = frontier.get()\n",
+    "\n",
+    "print(f\"Solved in {counter:,} steps\")\n",
+    "print(path_cost(current_state))\n",
+    "current_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solved in 3 steps\n",
+      "State(taken=frozenset({9, 3, 5}), not_taken=frozenset({0, 1, 2, 4, 6, 7, 8}))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +310,7 @@
    "source": [
     "#use as priority function the iinverse of path_cost: smaller is better\n",
     "def priority_function(state):\n",
-    "    return -path_cost(state)\n",
+    "    return path_cost2(state)\n",
     "\n",
     "#Dijsktra logic applied though a priority function on a list (look at the frontier variable) NOT with a PriorityQueue. Some difference could appear in the\n",
     "\n",
@@ -259,11 +326,11 @@
     "        new_node = new_state # Use new_state as new_node\n",
     "        if new_state not in state_cost and new_state not in frontier: # Use .queue to get a list of elements in the PriorityQueue\n",
     "            # Add node to frontier and update solution\n",
-    "            state_cost[new_node] = path_cost(new_state) # Update state_cost dictionary\n",
+    "            state_cost[new_node] = path_cost2(new_state) # Update state_cost dictionary\n",
     "            frontier.append(new_state)\n",
-    "        elif new_state in frontier and state_cost[new_node] > path_cost(new_state): \n",
+    "        elif new_state in frontier and state_cost[new_node] > path_cost2(new_state): \n",
     "            #update node and solution\n",
-    "            state_cost[new_node] = path_cost(new_state) # Update state_cost dictionary\n",
+    "            state_cost[new_node] = path_cost2(new_state) # Update state_cost dictionary\n",
     "    frontier.sort(key=priority_function) #let's apply the priority sorting to make the list equal to a real priority queue\n",
     "    current_state = frontier.pop()  #this pop takes off the element with the highest priority\n",
     "\n",
@@ -276,24 +343,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 44 steps\n",
-      "State(taken=frozenset({2, 3, 7}), not_taken=frozenset({0, 1, 4, 5, 6}))\n"
+      "Solved in 163 steps\n",
+      "State(taken=frozenset({9, 3, 1, 6}), not_taken=frozenset({0, 2, 4, 5, 7, 8}))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10"
+       "5"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
