Lab01 overlap factor added

--- a/CI - Lab/Lab01/A_star.ipynb
+++ b/CI - Lab/Lab01/A_star.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROBLEM_SIZE = 30\n",
-    "NUM_SETS = 50\n",
+    "NUM_SETS = 40\n",
     "\n",
     "SETS = tuple(np.array([random() < .3 for _ in range(PROBLEM_SIZE)]) for _ in range(NUM_SETS))\n",
     "State = namedtuple('State', ['taken', 'not_taken'])\n"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overlap(i, taken):\n",
+    "    # Calcola la sovrapposizione tra l'insieme i e gli insiemi già selezionati\n",
+    "    overlap = sum(np.logical_and(SETS[i], np.any([SETS[j] for j in taken], axis=0)))\n",
+    "    return overlap\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +87,10 @@
     "    missing_size = PROBLEM_SIZE - sum(already_covered)  #number of sets not covered yet\n",
     "    \n",
     "    #calculate the density of each set as the number of uncovered elements it can cover divided by its total coverage\n",
-    "    densities = [(i, sum(np.logical_and(SETS[i], np.logical_not(already_covered))) / sum(SETS[i])) for i in state.not_taken]\n",
-    "    \n",
+    "    #an OVERLAP factor is added to Calculate the overlap between set i and every already selected set. \n",
+    "    #Finally, the sum function adds up all the true values (which represent an overlap) to get the total number of overlapped elements. Less overlap is better.\n",
+    "    densities = [(i, sum(np.logical_and(SETS[i], np.logical_not(already_covered))) / (1 + overlap(i, state.taken)) / sum(SETS[i])) for i in state.not_taken]\n",
+    "        \n",
     "    #order the sets in descending order with respect to the density\n",
     "    candidates = [SETS[i] for i, _ in sorted(densities, key=lambda x: x[1], reverse=True)]\n",
     "    \n",
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,22 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 320 steps\n",
+      "Solved in 132 steps\n",
       "4\n",
-      "State(taken={27, 23, 30, 6}, not_taken={0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49})\n"
+      "State(taken={3, 25, 34, 11}, not_taken={0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39})\n"
      ]
     }
    ],
    "source": [
     "\n",
     "####  My own A* APPROACH  where the h function takes the optimistic info from the DENSITY of each set ####\n",
+    "\n",
+    "#This heuristic is optimistic because it assumes that every set selected in the future will be able to cover the maximum possible number of uncovered elements \n",
+    "#(i.e., the sets with the highest density). \n",
+    "#Therefore, it should work well with the A* algorithm.\n",
     "\n",
     "#set DENSITY is computed as the ratio between n_stil_uncovered_elements_coverable_by_the_set / n_total_elements_coverable_by_the_set\n",
     "\n",
@@ -149,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 567 steps\n",
+      "Solved in 200 steps\n",
       "4\n",
-      "State(taken={9, 21, 27, 5}, not_taken={0, 1, 2, 3, 4, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49})\n"
+      "State(taken={24, 34, 3, 14}, not_taken={0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25, 26, 27, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39})\n"
      ]
     }
    ],
@@ -207,24 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 158,245 steps\n",
+      "Solved in 95,752 steps\n",
       "4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "State(taken={27, 21, 6, 23}, not_taken={0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 24, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49})"
+       "State(taken={33, 18, 4, 30}, not_taken={0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 31, 32, 34, 35, 36, 37, 38, 39})"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,27 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "State(taken={7, 22, 23}, not_taken={0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39})"
-      ]
-     },
-     "execution_count": 364,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "current_state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +288,7 @@
        "True"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,63 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True False False  True  True False  True  True False False  True  True\n",
-      " False False  True False  True  True  True False  True False False False\n",
-      " False False False False False  True]\n",
-      "[False  True  True False  True  True  True False  True False False  True\n",
-      "  True False False  True False False  True False  True False False False\n",
-      " False False False  True  True False]\n",
-      "[False False  True False False False False  True False  True False False\n",
-      " False False False False False  True False  True False  True  True  True\n",
-      " False False  True  True False False]\n",
-      "[False  True False  True False False False False False False False False\n",
-      " False  True False  True False False False  True False  True False False\n",
-      "  True  True  True False False False]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 388,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "                                                                #  FINAL CONSIDERATIONS  #\n",
     "\n",
-    "print(SETS[27])\n",
-    "print(SETS[23])\n",
-    "print(SETS[30])\n",
-    "print(SETS[6])\n",
+    "#The heuristic h3(state) might be more efficient if the size of the sets (i.e., the number of elements they cover) is a critical factor in your problem. \n",
+    "#Since h3(state) prioritizes sets that cover more elements, it might be able to cover all the uncovered elements more quickly.\n",
     "\n",
-    "state= State(taken={27, 23, 30, 6}, not_taken={0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49})\n",
-    "goal_check(state)\n",
-    "\n"
+    "#On the other hand, my personal heuristic h(state) might be more efficient if the “density” of the sets (i.e., the ratio between the number of uncovered elements they can cover and their total coverage)\n",
+    "#is a critical factor. Since h(state) prioritizes sets with a higher density, it might be able to cover all the uncovered elements using fewer sets.\n",
+    "#The overlap factor added as ulterior denominator is used to encourage the algorithm to prefer solutions with a lower number of overlaps\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
