Lab02 still work in progress but good results

--- a/CI -Works/rastrigin.ipynb
+++ b/CI -Works/rastrigin.ipynb
@@ -288,7 +288,8 @@
     "best_fitness = None\n",
     "history = list()\n",
     "for step in (range(1_000_000 // λ)):\n",
-    "    # offspring <- select λ random points from the population of μ\n",
+    "    # offspring <- select λ random points from the population initially composed of μ elements (see population) \n",
+    "    #in this case lambda > mu so we'll see copies of same individuals indie the offspring\n",
     "    offspring = population[np.random.randint(0, μ, size=(λ,))] \n",
     "    # mutate all σ (last column) usign the current sigma value (loc=offspring[:, -1]) as avg of the distribution and scale=0.2 as std \n",
     "    offspring[:, -1] = np.random.normal(\n",
@@ -305,6 +306,7 @@
     "    # add an extra column with the evaluation and sort\n",
     "    #Offspring[fitness.argsort()] sorts the population of children by fitness. \n",
     "    fitness = rastrigin(offspring[:, 0:-1])\n",
+    "    \n",
     "     # argsort() returns the indexes that would sort the fitness array, and Offspring[...] selects the individuals in this order.\n",
     "    # So after this row, the first individual in Offspring will have the lowest fitness and the last individual will have the highest fitness\n",
     "    offspring = offspring[fitness.argsort()]\n",
